--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./src/output.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./src/output.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
+    <header class="w-full border-b border-dashed border-gray-300">
+      <div
+        class="container max-w-[1200px] mx-auto flex items-center justify-between py-4 px-4"
+      >
+        <div class="flex items-center space-x-2">
+          <img src="./img/logo.svg" alt="logo" class="h-6" />
+        </div>
 
-</body>
+        <nav class="hidden md:flex space-x-8 text-gray-800 font-medium">
+          <a href="#" class="hover:text-[#4840bb]">Invest</a>
+          <a href="#" class="hover:text-[#4840bb]">Cash</a>
+          <a href="#" class="hover:text-[#4840bb]">Borrow</a>
+          <a href="#" class="hover:text-[#4840bb]">Blog</a>
+        </nav>
+
+        <div class="hidden md:flex space-x-3">
+          <button
+            class="px-5 py-1.5 border border-[#4840bb] text-[#4840bb] rounded-md hover:bg-[#f5f4ff]"
+          >
+            Log in
+          </button>
+          <button
+            class="px-5 py-1.5 bg-[#4840bb] text-white rounded-md hover:bg-[#362f99]"
+          >
+            Get started
+          </button>
+        </div>
+
+        <button id="menu-btn" class="md:hidden flex flex-col space-y-1">
+          <span class="w-6 h-0.5 bg-gray-800"></span>
+          <span class="w-6 h-0.5 bg-gray-800"></span>
+          <span class="w-6 h-0.5 bg-gray-800"></span>
+        </button>
+      </div>
+
+      <div
+        id="mobile-menu"
+        class="hidden md:hidden flex flex-col items-center space-y-4 py-4 border-t"
+      >
+        <a href="#" class="hover:text-[#4840bb]">Invest</a>
+        <a href="#" class="hover:text-[#4840bb]">Cash</a>
+        <a href="#" class="hover:text-[#4840bb]">Borrow</a>
+        <a href="#" class="hover:text-[#4840bb]">Blog</a>
+        <button
+          class="px-5 py-1.5 border border-[#4840bb] text-[#4840bb] rounded-md hover:bg-[#f5f4ff]"
+        >
+          Log in
+        </button>
+        <button
+          class="px-5 py-1.5 bg-[#4840bb] text-white rounded-md hover:bg-[#362f99]"
+        >
+          Get started
+        </button>
+      </div>
+    </header>
+  </body>
 </html>
