--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <style>
@@ -21,7 +25,9 @@
         class="container max-w-[1200px] mx-auto flex items-center justify-between py-4 px-4"
       >
         <div class="flex items-center space-x-2">
-          <img src="./img/logo.svg" alt="logo" class="h-6" />
+          <a href="#">
+            <img src="./img/logo.svg" alt="logo" class="h-8" />
+          </a>
         </div>
 
         <nav class="hidden md:flex space-x-8 text-gray-800 font-medium">
@@ -71,5 +77,90 @@
         </button>
       </div>
     </header>
+
+    <section class="w-full">
+      <div
+        class="container max-w-[1200px] mx-auto flex flex-col md:flex-row items-center px-4 py-12 gap-8"
+      >
+        <div class="w-full md:w-1/2">
+          <img
+            src="./img/Frame (11).svg"
+            alt="hero image"
+            class="w-full object-cover h-full md:h-full"
+          />
+        </div>
+
+        <div class="w-full md:w-1/2 flex flex-col items-start space-y-6">
+          <h1
+            class="text-4xl md:text-5xl font-bold text-[#2b235f] leading-tight"
+          >
+            Make wealth<br />
+            your own.
+          </h1>
+          <p class="text-gray-600 text-base max-w-md">
+            Personalized, Automated, Effortless <br />
+            Investing and Savings.
+          </p>
+          <button
+            class="px-6 py-3 bg-[#4840bb] text-white rounded-md hover:bg-[#362f99]"
+          >
+            Get started
+          </button>
+        </div>
+      </div>
+
+      <div class="container max-w-[1200px] mx-auto px-4 mt-6">
+        <div class="border-t border-dashed border-gray-300 pt-6">
+          <div
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-6 gap-4 items-start"
+          >
+            <div class="flex flex-col items-start">
+              <img
+                src="./img/Frame (12).svg"
+                alt="nerdwallet"
+                class="h-6 mb-1"
+              />
+              <p class="text-xs text-gray-500">
+                Best Robo-advisor, 2019 <br />
+                Best Cash Management App, 2020
+              </p>
+            </div>
+
+            <div class="flex flex-col items-start">
+              <img
+                src="./img/Group (14).svg"
+                alt="investopedia"
+                class="h-6 mb-1"
+              />
+              <p class="text-xs text-gray-500">Best Robo-advisor, 2020</p>
+            </div>
+
+            <div class="text-center">
+              <div class="text-xl font-bold text-[#2b235f]">450K+</div>
+              <div class="text-xs text-gray-500">Trusted clients</div>
+            </div>
+
+            <div class="text-center">
+              <div class="text-xl font-bold text-[#2b235f]">$26B+</div>
+              <div class="text-xs text-gray-500">In client funds</div>
+            </div>
+
+            <div class="text-center">
+              <div class="text-xl font-bold text-[#2b235f]">
+                4.9 <span class="text-[#2b235f]">★</span>
+              </div>
+              <div class="text-xs text-gray-500">Apple App Store</div>
+            </div>
+
+            <div class="text-center">
+              <div class="text-xl font-bold text-[#2b235f]">
+                4.5 <span class="text-[#2b235f]">★</span>
+              </div>
+              <div class="text-xs text-gray-500">Google Play Store</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
