Feauter section done!

--- a/index.html
+++ b/index.html
@@ -162,5 +162,83 @@
         </div>
       </div>
     </section>
+
+    <section class="py-20">
+      <div
+        class="container max-w-[1100px] mx-auto px-6 grid md:grid-cols-2 gap-8 items-center"
+      >
+        <div>
+          <h2 class="text-4xl font-bold text-[#2b235f] mb-4 leading-snug">
+            Investing <br />
+            isn’t easy.<br />
+            We just <br />
+            make it feel <br />
+            that way.
+          </h2>
+          <p class="text-gray-600 mb-6 max-w-md">
+            Let us customize a portfolio just for you or build <br />
+            it yourself, and our powerful automation will <br />
+            make the most of your investments, optimizing <br />
+            your performance and helping lower your taxes.
+          </p>
+          <div class="flex gap-4">
+            <a
+              href="#"
+              class="bg-[#4840bb] text-white px-6 py-3 rounded font-medium hover:opacity-85 transition"
+            >
+              Start investing
+            </a>
+            <a
+              href="#"
+              class="text-[#4840bb] font-medium hover:underline px-4 py-3"
+            >
+              Learn more
+            </a>
+          </div>
+        </div>
+
+        <div class="relative flex justify-center">
+          <img
+            src="./img/app-screen-1.svg"
+            alt="App screen"
+            class="rounded-xl shadow-lg max-w-xs relative z-0"
+          />
+
+          <div
+            class="absolute top-10 -right-40 bg-white shadow-md rounded-lg px-4 py-4 text-sm border w-60 z-10"
+          >
+            <div class="flex items-center gap-2 mb-1">
+              <img
+                src="./img/Frame (13).svg"
+                alt="Wealthfront logo"
+                class="h-6 w-6"
+              />
+              <span class="font-semibold text-[#4840bb]">Wealthfront</span>
+            </div>
+            <p class="text-gray-600">
+              We saved you $78.11 on <br />
+              your taxes.
+            </p>
+          </div>
+
+          <div
+            class="absolute top-43 right-0 bg-white shadow-md rounded-lg px-4 py-4 text-sm border w-60 z-10"
+          >
+            <div class="flex items-center gap-2 mb-1">
+              <img
+                src="./img/Frame (13).svg"
+                alt="Wealthfront logo"
+                class="h-6 w-6"
+              />
+              <span class="font-semibold text-[#4840bb]">Wealthfront</span>
+            </div>
+            <p class="text-gray-600">
+              We automatically invested <br />
+              your $500 deposit.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
