Cash Account section done!

--- a/index.html
+++ b/index.html
@@ -240,5 +240,56 @@
         </div>
       </div>
     </section>
+
+    <section class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50">
+      <div
+        class="max-w-[1100px] mx-auto flex flex-col md:flex-row items-center gap-12"
+      >
+        <div class="flex-1 flex items-center justify-center relative">
+          <div class="absolute -left-30 top-56 z-10">
+            <img
+              src="./img/Group (15).svg"
+              alt="Debit Visa Card"
+              class="w-80 h-auto rounded-2xl"
+            />
+          </div>
+
+          <div class="relative z-0">
+            <img
+              src="./img/image 2 (1).svg"
+              alt="Mobile app interface"
+              class="w-80 h-auto rounded-2xl"
+            />
+          </div>
+        </div>
+
+        <div class="flex-1 text-center md:text-left">
+          <h2
+            class="text-3xl md:text-4xl font-bold text-[#2b235f] leading-tight mb-4"
+          >
+            Everyday cash,<br />designed to<br />build <br> long-term <br> wealth.
+          </h2>
+          <p class="text-gray-600 mb-6 max-w-md">
+            Our Cash account, offered with Green Dot Bank, lets <br> you automate
+            your savings, so you can pay bills, <br> withdraw from 19,000+ ATMs, and
+            invest your extra <br> cash in seconds to keep building your future.
+          </p>
+          <div
+            class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
+          >
+            <button
+              class="bg-[#4840bb] text-white px-6 py-2 rounded-lg font-medium hover:bg-[#3a33a3] transition"
+            >
+              Start saving
+            </button>
+            <button
+              class="border border-[#4840bb] text-[#4840bb] px-6 py-2 rounded-lg font-medium hover:bg-purple-50 transition"
+            >
+              Learn more
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
