Saving & Investing Section done!

--- a/index.html
+++ b/index.html
@@ -267,12 +267,15 @@
           <h2
             class="text-3xl md:text-4xl font-bold text-[#2b235f] leading-tight mb-4"
           >
-            Everyday cash,<br />designed to<br />build <br> long-term <br> wealth.
+            Everyday cash,<br />designed to<br />build <br />
+            long-term <br />
+            wealth.
           </h2>
           <p class="text-gray-600 mb-6 max-w-md">
-            Our Cash account, offered with Green Dot Bank, lets <br> you automate
-            your savings, so you can pay bills, <br> withdraw from 19,000+ ATMs, and
-            invest your extra <br> cash in seconds to keep building your future.
+            Our Cash account, offered with Green Dot Bank, lets <br />
+            you automate your savings, so you can pay bills, <br />
+            withdraw from 19,000+ ATMs, and invest your extra <br />
+            cash in seconds to keep building your future.
           </p>
           <div
             class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
@@ -288,6 +291,36 @@
               Learn more
             </button>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="py-16 px-4 sm:px-6 lg:px-8 bg-[#4840bb] text-white overflow-hidden"
+    >
+      <div
+        class="max-w-7xl mx-auto flex flex-col md:flex-row items-center gap-12"
+      >
+        <div class="flex-1 p-8 text-center md:text-left">
+          <h2 class="text-4xl md:text-5xl font-bold leading-tight mb-6">
+            Saving and <br />investing.<br />
+            All while<br />
+            you’re <br />relaxing.
+          </h2>
+          <p class="text-base md:text-lg text-gray-200 max-w-md">
+            Tell us what you're saving for, and we'll automatically <br />set
+            aside extra cash to hit your goals. And since we <br />connect with
+            all your accounts, you only need one <br />app to watch your wealth
+            grow.
+          </p>
+        </div>
+
+        <div class="flex-1">
+          <img
+            src="./img/image 3 (1).svg"
+            alt="Graph and accounts preview"
+            class="w-full h-auto object-cover"
+          />
         </div>
       </div>
     </section>
