testimonial section + js done!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wealthfront</title>
     <link rel="stylesheet" href="./src/output.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
@@ -324,5 +324,61 @@
         </div>
       </div>
     </section>
+
+    <section
+      class="relative bg-[#230b59] py-32 px-4 sm:px-6 lg:px-8 overflow-hidden"
+    >
+      <div class="max-w-7xl mx-auto relative">
+        <div
+          class="relative flex flex-col md:flex-row justify-center gap-6 -translate-y-24"
+        >
+          <div
+            class="w-full max-w-xs p-6 bg-white text-gray-800 rounded-lg shadow-lg"
+          >
+            <div
+              class="text-xs font-medium text-gray-400 uppercase tracking-wide mb-3"
+            >
+              TESTIMONIAL
+            </div>
+            <p class="text-xl font-semibold leading-relaxed mb-4">
+              It's the single best resource for both investing, managing
+              retirement and seeing my entire financial picture.
+            </p>
+            <div class="text-sm text-gray-500">Joshua B</div>
+          </div>
+
+          <div
+            class="w-full max-w-xs p-6 bg-white text-gray-800 rounded-lg shadow-lg"
+          >
+            <div
+              class="text-xs font-medium text-gray-400 uppercase tracking-wide mb-3"
+            >
+              TESTIMONIAL
+            </div>
+            <p class="text-xl font-semibold leading-relaxed mb-4">
+              Wealthfront is the first thing in my life that actually motivated
+              me to save money.
+            </p>
+            <div class="text-sm text-gray-500">Isidore</div>
+          </div>
+
+          <div
+            class="w-full max-w-xs p-6 bg-white text-gray-800 rounded-lg shadow-lg"
+          >
+            <div
+              class="text-xs font-medium text-gray-400 uppercase tracking-wide mb-3"
+            >
+              TESTIMONIAL
+            </div>
+            <p class="text-xl font-semibold leading-relaxed mb-4">
+              It's automatic, and I'm lazy.
+            </p>
+            <div class="text-sm text-gray-500">Ryan</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="./main.js"></script>
   </body>
 </html>
