Pre-footer section done!

--- a/index.html
+++ b/index.html
@@ -379,6 +379,53 @@
       </div>
     </section>
 
+    <section class="container mx-auto px-4 py-12 max-w-[1200px] text-center">
+      <!-- Asosiy rasm -->
+      <img
+        src="./img/Rectangle.svg"
+        alt="Plant illustration"
+        class="mx-auto mb-8 w-100 md:w-80 h-auto"
+      />
+
+      <!-- Sarlavha matn -->
+      <h1
+        class="text-3xl md:text-4xl lg:text-5xl font-bold leading-relaxed mb-6"
+        style="color: #230b59"
+      >
+        Over
+        <span class="font-extrabold text-4xl md:text-5xl">450,000</span> people
+        are <br />
+        already using Wealthfront to <br />
+        earn more and worry less
+      </h1>
+
+      <!-- Tugma -->
+      <a
+        href="#"
+        class="inline-block bg-indigo-700 hover:bg-indigo-800 text-white px-6 py-2 rounded-md text-base font-medium transition-colors"
+      >
+        Get started
+      </a>
+
+      <!-- Brendlar bo'limi -->
+      <div class="mt-16 text-sm uppercase tracking-wide text-gray-600">
+        As featured in
+      </div>
+
+      <div
+        class="container mx-auto flex justify-between items-center mt-6 px-4 flex-wrap gap-y-6"
+      >
+        <img src="./img/Frame (14).svg" alt="WSJ" class="h-12 w-auto" />
+        <img src="./img/Frame (15).svg" alt="Bloomberg" class="h-12 w-auto" />
+        <img
+          src="./img/Frame (16).svg"
+          alt="The New York Times"
+          class="h-12 w-auto"
+        />
+        <img src="./img/Frame (17).svg" alt="Reuters" class="h-12 w-auto" />
+        <img src="./img/Frame (18).svg" alt="CNBC" class="h-12 w-auto" />
+      </div>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
