--- a/index.html
+++ b/index.html
@@ -426,6 +426,155 @@
         <img src="./img/Frame (18).svg" alt="CNBC" class="h-12 w-auto" />
       </div>
     </section>
+
+    <footer class="text-gray-200 text-sm" style="background-color: #0d0d26">
+      <div class="max-w-[1200px] mx-auto px-4 py-12">
+        <div
+          class="flex flex-col md:flex-row justify-between items-start md:items-center mb-10"
+        >
+          <div class="mb-6 md:mb-0">
+            <img src="./img/logo2.svg" alt="Wealthfront" class="h-8" />
+          </div>
+
+          <nav class="grid grid-cols-3 gap-x-10 gap-y-4 text-sm">
+            <a href="#" class="hover:text-white transition">Careers</a>
+            <a href="#" class="hover:text-white transition">Legal</a>
+            <a href="#" class="hover:text-white transition">Methodology</a>
+
+            <a href="#" class="hover:text-white transition">Contact</a>
+            <a href="#" class="hover:text-white transition">Help center</a>
+            <a href="#" class="hover:text-white transition">Blog</a>
+
+            <a href="#" class="hover:text-white transition">Planning</a>
+            <a href="#" class="hover:text-white transition">Retirement</a>
+            <a href="#" class="hover:text-white transition">Homeownership</a>
+
+            <a href="#" class="hover:text-white transition">College</a>
+            <a href="#" class="hover:text-white transition">Our PhD Team</a>
+            <a href="#" class="hover:text-white transition">Back to top</a>
+          </nav>
+        </div>
+
+        <hr class="border-gray-700 my-6" />
+
+        <div class="text-left leading-relaxed space-y-3 text-sm">
+          <p>
+            Testimonials were given by clients of both Wealthfront Advisers and
+            Wealthfront Brokerage. There is no guarantee that clients will have
+            similar experiences or success.
+          </p>
+          <p>
+            Nerdwallet and Investopedia (the "Endorsers") receive cash
+            compensation for referring potential clients to Wealthfront
+            Advisers, LLC ("Wealthfront Advisers") via advertisements placed on
+            their respective websites. The Endorsers and Wealthfront Advisers
+            are not associated with one another and have no formal relationship
+            outside of this arrangement. Nerdwallet's opinions are their own.
+            Their ratings are determined by their editorial team. The scoring
+            formula for online brokers and robo-advisors was established in June
+            2021. Wealthfront provided cash compensation to Investopedia for the
+            original assessment. For more information about how Investopedia
+            evaluates a robo-advisor, see the methodology and review process.
+          </p>
+          <p>
+            Apple App Store and Google Play Store ratings based on user ratings
+            from February 2014 (Apple) and December 2015 (Google) through June
+            2021. Ratings compiled by Apple, Inc., and Google, Inc., who receive
+            compensation for hosting our app.
+          </p>
+          <p>
+            By using this website, you understand the information being
+            presented is provided for informational purposes only and agree to
+            our
+            <a href="#" class="text-gray-300 hover:text-white">Terms of Use</a>
+            and
+            <a href="#" class="text-gray-300 hover:text-white">Privacy Policy</a
+            >.
+          </p>
+          <p>
+            Wealthfront Advisers relies on information from various sources
+            believed to be reliable, including clients and third parties, but
+            cannot guarantee the accuracy and completeness of that information.
+            Nothing in this communication should be construed as an offer,
+            recommendation, or solicitation to buy or sell any security.
+            Additionally, Wealthfront Advisers or its affiliates do not provide
+            tax advice and investors are encouraged to consult with their
+            personal tax advisors.
+          </p>
+          <p>
+            We've partnered with Green Dot Bank, Member FDIC, to bring you
+            checking features.
+          </p>
+          <p>
+            Checking features for the Cash Account are subject to identity
+            verification by Green Dot Bank. Debit Card is optional and must be
+            requested. Wealthfront Cash Account Visa® Debit Card is issued by
+            Green Dot Bank, Member FDIC, pursuant to a license from Visa U.S.A.
+            Inc. Visa is a registered trademark of Visa International Service
+            Association. Green Dot Bank operates under the following registered
+            trade names: GO2bank, GoBank, Green Dot Bank and Bonneville Bank.
+            All of these registered trade names are used by, and refer to, a
+            single FDIC-insured bank, Green Dot Bank. Deposits under any of
+            these trade names are deposits with Green Dot Bank and are
+            aggregated for deposit insurance coverage. Wealthfront products and
+            services are not provided by Green Dot Bank. Green Dot is a
+            registered trademark of Green Dot Corporation. ©2021 Green Dot
+            Corporation. All rights reserved.
+          </p>
+          <p>
+            Certain Wealthfront Brokerage offerings (e.g., institutional-grade
+            and cash account) include checking or savings account. We convey
+            funds to institutions accepting and maintaining deposits. Investment
+            management and advisory services are provided by Wealthfront
+            Advisers LLC ("Wealthfront Advisers"), an SEC registered investment
+            adviser, and financial planning tools are provided by Wealthfront
+            Software LLC ("Wealthfront").
+          </p>
+          <p>
+            The effectiveness of the Tax Loss Harvesting strategy to reduce the
+            tax liability of the client will depend on the client's entire tax
+            and investment profile, including purchases and dispositions in a
+            client's (or client's spouse's) accounts outside of Wealthfront
+            Advisers and your type of investments (e.g., taxable or nontaxable)
+            or holding period (e.g., short-term or long-term). Tax loss
+            harvesting may generate a higher number of trades due to attempts to
+            capture losses. There is a chance that trading attributed to tax
+            loss harvesting may create capital gains and wash sales and could be
+            subject to higher transaction costs and market impacts. In addition,
+            tax loss harvesting strategies may produce losses, which may not be
+            offset by sufficient gains in the account and may be limited to a
+            $3,000 deduction against income. The utilization of losses harvested
+            through the strategy will depend upon the recognition of capital
+            gains in the same or a future tax period, and in addition may be
+            subject to limitations under applicable tax laws, e.g., if there are
+            insufficient realized gains in the tax period, the use of harvested
+            losses may be limited to a $3,000 deduction against income and
+            distributions. Losses harvested through the strategy that are not
+            utilized in the tax period when recognized (e.g., because of
+            insufficient capital gains and/or significant capital loss
+            carryforwards), generally may be carried forward to offset future
+            capital gains, if any.
+          </p>
+          <p>
+            All investing involves risk, including the possible loss of money
+            you invest, and past performance does not guarantee future
+            performance. Historical returns, expected returns, and probability
+            projections are provided for informational and illustrative
+            purposes, and may not reflect actual future performance. See our
+            <a href="#" class="text-gray-300 hover:text-white"
+              >risk disclosure</a
+            >.
+          </p>
+          <p>
+            Wealthfront, Wealthfront Advisers and Wealthfront Brokerage are
+            wholly owned subsidiaries of Wealthfront Corporation.
+          </p>
+          <p class="text-xs mt-4">
+            © 2021 Wealthfront Corporation. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="./main.js"></script>
   </body>
 </html>
